--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/server.ts",
+    "start": "node build/server.js",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npm run build",
@@ -14,14 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
-    "mongoose": "^6.2.0",
-    "nodemon": "^2.0.15",
+    "mongoose": "^6.1.7",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.8",
+    "@types/node": "^16.11.21",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
