--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
